--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 padding: .5em;
             }
 
-            .chess-board td, .cell{                 
+            .chess-board td, .cell {
                 width: 5em;
                 height: 5em;
                 text-align: center;
@@ -38,12 +38,11 @@
                 background: #b58863;
             }
 
-            img {
+        img {
             height: 70px;
-            }
-        
-}
+        }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="~/js/game.js"></script>
 </head>
 <body>
